updated read me and added bottstrap grid system to ensure it was responsive on mobile device

--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,9 @@
     margin: 0;
     box-sizing: border-box;
     text-align: center;
+    height:100vh;
+    width:80vw;
+    margin-left:10vw;
 }
 
 #entire-body {
@@ -55,10 +58,12 @@
 .fadeOut {
     opacity: 0;
     transition:opacity 0.5s ease 0.6s;
+    pointer-events: none;
 }
 .fadeIn {
     opacity: 1;
     transition: opacity 0.5s ease 0.6s;
+    pointer-events: all;
 }
 .opacity-on {
     opacity: 1;
